  * When selecting breakpoints with the space bar in the source viewer,
    CGDB now selects breakpoints using an absolute path to the file
    instead of a relative path. This prevents breakpoints being set on files
    with the same base name.

  * Fix issue #293 - Random breakpoints are no displayed on file reload
    Previously, when running cgdb, if you change a file you are debugging,
    recompile the exe, and 'run' again in the gdb window in cgdb, cgdb would
    reload the changed file and sometimes display garbage breakpoints.
    Now only the correct breakpoints are displayed on reload.

  * Fix issue #303 - CGDB crashes while resizing window
    Previously if a lot of text existed in the gdb window, then a resize
    could trigger a crash. Now no crash will occur.

cgdb-0.8.0 (01/16/2022)

  * Fix issue #298 - CGDB now exits when gdb exits
    Previously if gdb exited but the inferior, or child of the inferior
    was still running, cgdb would possibly continue running in a
    non responsive state. Now cgdb exits when gdb does.

  * Fix issue #278, Single stepping through disassembly without debug
    symbols does not move arrow in source window. Now the arrow moves in
    the source window as expected.

  * Fix issue #135 CGDB freezes when pressing "o" to open the file dialog
    Previously, if you attempted to open the file dialog, cgdb would 
    sometimes hang, due to a gdbwire parsing bug from the gdb response.
    This has been resolved.

  * Fix issue #152, breakpoint handling is broken in disasembly view
    Previously, if you set a breakpoint in the source view, it would not
    be reflected in the disassembly view, and vice versa. Now if you set
    a breakpoint in either view, it should be reflected in the other.

  * Fix issue #260, CGDB would not process commands after F5, F6, etc
    If F5, F6, F7, F8, F10 were hit, CGDB would no longer process GDB
    commands, like setting breakpoints, etc. Now CGDB works as expected.
